--- a/src/styles/toast.css
+++ b/src/styles/toast.css
@@ -7,8 +7,10 @@
     width: 300px;
     padding: 10px;
     border-radius: 8px;
-    /* box-shadow: 0px 4px 4px var(--box-shadow-color); */
-    animation: toastIt 3000ms ease-in forwards;
+    font-size: 20px;
+    font-weight: 500;
+    box-shadow: 0px 4px 4px var(--brand100);
+    animation: toastIt 4000ms ease-in forwards;
 }
 
 @keyframes toastIt {
@@ -18,13 +20,15 @@
     100% {right: 30px; top:-100px}
 }
 
-/* .successToast {
-    border: 2px solid var(--sucess);
-    background-color: var(--sucess-bg);
+.successToast {
+    border: 2px solid var(--sucess100);
+    background-color: var(--sucess100);
+    color: var(--gray900);
 }
 
 .errorToast {
-    border: 2px solid var(--error-2);
-    background-color: var(--error-bg);
-} */
+    border: 2px solid var(--alert100);
+    background-color: var(--alert100);
+    color: var(--gray900);
+}
 
